@@ -1,5 +1,7 @@
 #!/bin/sh
 # $Id$
+# tcfmgr - TeX configuration file manager (sort of).
+# Public domain.  Originally written by Thomas Esser.
 
 # invoke the right shell:
 
@@ -13,7 +15,10 @@ test -f /bin/bsh && test -z "$RUNNING_BSH" \
   && { RUNNING_BSH=true; export RUNNING_BSH; exec /bin/bsh $0 ${1+"$@"}; }
 unset RUNNING_BSH
 
-export PATH
+# preferentially use subprograms from our own directory.
+mydir=`echo "$0" | sed 's,/[^/]*$,,'`
+mydir=`cd "$mydir" && pwd`
+PATH="$mydir:$PATH"; export PATH
 
 # hack around a bug in zsh:
 test -n "${ZSH_VERSION+set}" && alias -g '${1+"$@"}'='"$@"'
